tests/build_fail/bseq_fail_bits_binary_syn.rs
use bit_seq::bseq;

fn main() { bseq!(0b101) }